--- a/MusicStreamingApp/AndroidManifest.xml
+++ b/MusicStreamingApp/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.musicstreamingapp">
 
+    <!-- 인터넷 설정 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
