--- a/FineDustApp/gradle.properties
+++ b/FineDustApp/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+KAKAO_API_KEY="3af39904a75f6693397dcf2d1293657e"
