--- a/FineDustApp/gradle.properties
+++ b/FineDustApp/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 KAKAO_API_KEY="3af39904a75f6693397dcf2d1293657e"
+AIRKOREA_SERVICE_KEY="ubVPlngcBiDD25r4eaxLwCmeQNXoB97%2FVq7w%2FAyou8sjk9hul6mCxGN8Bo1%2F7%2Bqzu4fGgVSqe4BpcMW4lziSlg%3D%3D"
