--- a/ToDoList/app/build.gradle
+++ b/ToDoList/app/build.gradle
@@ -41,8 +41,24 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation 'org.mockito:mockito-inline:3.4.0'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 
     // Koin DI
     implementation "io.insert-koin:koin-android:3.1.6"
     testImplementation "io.insert-koin:koin-test:3.1.6"
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
+    // LiveData
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+
+    // ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+
+    // Lifecycle Extension
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
