--- a/Subway_Information_App/app/build.gradle
+++ b/Subway_Information_App/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -48,4 +51,8 @@ dependencies {
     // Koin
     implementation "io.insert-koin:koin-android:3.2.2"
     testImplementation "io.insert-koin:koin-test:3.2.2"
+
+    // Jetpack Navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
 }
